feat: add member module for activation
