# public/assets/api.yaml
@@ -230,6 +230,162 @@ paths:
       security:
         -
           bearer_auth: []
+  /members:
+    get:
+      tags:
+        - Member
+      summary: 'Find list Member'
+      description: 'Returns list of Member'
+      operationId: getMember
+      parameters:
+        -
+          name: search
+          in: query
+          description: 'search by column defined'
+          schema:
+            type: object
+        -
+          name: order
+          in: query
+          description: 'order by column defined'
+          schema:
+            type: object
+        -
+          name: page
+          in: query
+          description: 'page to show'
+          schema:
+            type: int32
+        -
+          name: limit
+          in: query
+          description: 'count data display per page'
+          schema:
+            type: int32
+      responses:
+        '200':
+          description: 'successful operation'
+          content:
+            application/json:
+              schema:
+                properties:
+                  data: { type: array, items: { $ref: '#/components/schemas/Member' } }
+                  pagination: { properties: { currentPage: { type: integer }, totalPage: { type: integer } }, type: object }
+                type: object
+            application/xml:
+              schema:
+                properties:
+                  data: { type: array, items: { $ref: '#/components/schemas/Member' } }
+                  pagination: { type: array, items: { $ref: '#/components/schemas/Member' } }
+                type: object
+        '404':
+          description: 'Member not found'
+      security:
+        -
+          bearer_auth: []
+    post:
+      tags:
+        - Member
+      summary: 'Add a new Member to the store'
+      operationId: addMember
+      requestBody:
+        $ref: '#/components/requestBodies/Member'
+      responses:
+        '201':
+          description: 'Created Member'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Member'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Member'
+        '405':
+          description: 'Invalid input'
+      security:
+        -
+          bearer_auth: []
+  '/members/{id}':
+    get:
+      tags:
+        - Member
+      summary: 'Find Member by ID'
+      description: 'Returns a single Member'
+      operationId: getMemberById
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID of Member to return'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: 'successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Member'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Member'
+        '400':
+          description: 'Invalid ID supplier'
+        '404':
+          description: 'Member not found'
+      security:
+        -
+          bearer_auth: []
+    put:
+      tags:
+        - Member
+      summary: 'Update an existing Member'
+      operationId: updateMember
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'Member id to update'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        $ref: '#/components/requestBodies/Member'
+      responses:
+        '400':
+          description: 'Invalid ID supplied'
+        '404':
+          description: 'Member not found'
+        '405':
+          description: 'Validation exception'
+      security:
+        -
+          bearer_auth: []
+    delete:
+      tags:
+        - Member
+      summary: 'Deletes a Member'
+      operationId: deleteMember
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'Member id to delete'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '400':
+          description: 'Invalid ID supplied'
+        '404':
+          description: 'Pet not found'
+      security:
+        -
+          bearer_auth: []
   /pengurus:
     get:
       tags:
@@ -737,6 +893,77 @@ components:
           type: string
           format: date
       type: object
+    Member:
+      title: Member
+      description: Member
+      properties:
+        id:
+          nullable: false
+          title: id
+          description: id
+          type: integer
+          format: '-'
+        name:
+          nullable: false
+          title: name
+          description: name
+          type: string
+          format: '-'
+          maxLength: 255
+        wilayah_id:
+          nullable: false
+          title: wilayah_id
+          description: wilayah_id
+          type: string
+          format: '-'
+          maxLength: 15
+        code:
+          nullable: false
+          title: code
+          description: code
+          type: string
+          format: '-'
+          maxLength: 18
+        address:
+          nullable: false
+          title: address
+          description: address
+          type: string
+          format: '-'
+          maxLength: 255
+        path_logo:
+          nullable: true
+          title: path_logo
+          description: path_logo
+          type: string
+          format: '-'
+          maxLength: 255
+        path_image:
+          nullable: true
+          title: path_image
+          description: path_image
+          type: string
+          format: '-'
+          maxLength: 255
+        state:
+          nullable: true
+          title: state
+          description: state
+          type: string
+          format: '-'
+        created_at:
+          nullable: false
+          title: created_at
+          description: created_at
+          type: string
+          format: date
+        updated_at:
+          nullable: false
+          title: updated_at
+          description: updated_at
+          type: string
+          format: date
+      type: object
     Pengurus:
       title: Pengurus
       description: Pengurus
@@ -914,6 +1141,18 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Jabatan'
+    Member:
+      description: 'Member object that needs to be added'
+      content:
+        application/x-www-form-urlencoded:
+          schema:
+            $ref: '#/components/schemas/Member'
+        application/xml:
+          schema:
+            $ref: '#/components/schemas/Member'
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Member'
     Pengurus:
       description: 'Pengurus object that needs to be added'
       content:
@@ -962,6 +1201,9 @@ tags:
   -
     name: Jabatan
     description: 'Everything about your Jabatan'
+  -
+    name: Member
+    description: 'Everything about your Member'
   -
     name: Pengurus
     description: 'Everything about your Pengurus'
